<resources>
    <string name="app_name">GitHubMu</string>
    <string name="search_hint">Find awesome GitHub user</string>
    <string name="follower_tab">Followers</string>
    <string name="following_tab">Following</string>
    <string name="setting">Setting</string>
    <string name="favorited_user">Favorited User</string>
    <string name="not_found">icon octodex bahwa list kosong</string>
    <string name="no_fav">No Favorited User</string>
    <string name="theme_description">Change to light mode</string>
    <string name="theme_title">Light Mode</string>

    <!-- Content Description -->
    <string name="tombol_setting">Tombol Setting</string>
    <string name="tombol_favorite">Tombol Favorite</string>
    <string name="user_fav">Favorite This User</string>
    <string name="user_loc">User\'s Location Icon</string>
    <string name="user_fol">User Follow Icon</string>
    <string name="user_pp">User Photo Profile</string>
    <string name="user_tabs">Tab of Followers and Following</string>
    <string name="pub_repo">197 Public Repositories</string>
    <string name="followers">200214 Followers</string>
    <string name="user_pubRepo">Icon Public Repository</string>
    <string name="user_followersCount">Icon User\'s Followers</string>
    <string name="user_avatar_rv">User Avatar RV</string>
    <string name="no_user">User Not Found</string>
</resources>