<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.SettingFragment"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?android:attr/colorPrimary">

    <!--  I prefer to use constraint layout over toolbar  -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="24sp"
            android:gravity="center"
            android:paddingHorizontal="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/setting_theme"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:paddingVertical="20dp"
        android:paddingHorizontal="14dp"
        android:background="@drawable/rounded_bg"
        >

        <TextView
            android:id="@+id/themeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_title"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/themeDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_description"
            android:fontFamily="@font/quicksand_regular"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/themeTitle"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:thumbTint="?android:attr/colorButtonNormal"
            android:enabled="true"
            android:checked="false"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>